--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ padding-bottom: 10px;
     padding-top: 40px;
 }
 .feedback{
-    margin: 20px;
+/*     margin: 20px; */
     border: 2px solid #D7D7D7;
     border-radius: 10px;
     box-shadow: 0px 25px 54px 0px #0000001F;
@@ -374,7 +374,7 @@ padding-bottom: 10px;
     justify-content: center;
  align-items: center;
 } */
-.head,.body{
+/* .head,.body{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -403,3 +403,4 @@ button{
     align-items: center;
     padding: 5px 10px;
 }
+ */
