--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
     height: 47px;
     border: 2px solid #2F80ED;
     border-radius: 8px;
-    margin: 15px 36px 15px 36px;
+    margin: 15px 46px 15px 20px;
     align-items: center;
     justify-content: center;
     
@@ -341,7 +341,7 @@ padding-bottom: 10px;
     padding-top: 40px;
 }
 .feedback{
-/*     margin: 20px; */
+    margin: 10px; 
     border: 2px solid #D7D7D7;
     border-radius: 10px;
     box-shadow: 0px 25px 54px 0px #0000001F;
