--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body{
     display: flex;
     flex-direction: column;
     position: sticky;
-/*     width: 100%; */
+    width: 100%;
+    top: o;
 }
 /* header_main-section */
 .main_container{
