--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     flex-direction: column;
     position: sticky;
 /*     width: 90%; */
-    top: o;
+/*     top: o; */
 }
 /* header_main-section */
 .main_container{
